upto google sign in and drive db upload

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
 
 
     <string name="rupee_symbol">\u20B9</string>
+    <string name="web_client_id">920809081967-kitusgnh7ku14tvpg5dcm988lhp3ojsk.apps.googleusercontent.com</string>
 </resources>
